--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <option value="3.26">$3.26</option>
             </select>
 
-            <div id="change-due"></div>
+            <div id="change-due" class="text-warning">abcd</div>
 
 
             <p class="text-light m-0">Cash from Customer:</p>
