--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
             <div class="customerThings">
                 <input type="text" class="form-control" id="cash" autocomplete="off">
-                <button id="purchase-btn">Purchase</button>    
+                <button id="purchase-btn" onclick="calculateChange()">Purchase</button>    
             </div>
         </div>
 
         <div class="cashierOpt border border-light">
             <p class="text-light">Change in Drawer:</p>
             <div class="theCid">
-                <p class="text-warning">testing</p>
             </div>
         </div>
     </div>
 </body>
 
+<script src="scriptTest.js"></script>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
