--- a/index.html
+++ b/index.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cash Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="centerContent">
-        <div class="puchaseOpt border border-light">
-            <p class="price text-light m-0">Price</p>
-            <select name="" id="thePrice" class="form-control">
-                <option value="19.5">$19.5</option>
-                <option value="3.26">$3.26</option>
-            </select>
+      <div class="puchaseOpt">    
+        <p id="price" class="text-light"></p>
 
-            <div id="change-due" class="text-warning">abcd</div>
+        <div id="change-due" class="text-warning"></div>
 
+        <p class="text-light m-0">Cash from Customer:</p>
 
-            <p class="text-light m-0">Cash from Customer:</p>
-
-            <div class="customerThings">
-                <input type="text" class="form-control" id="cash" autocomplete="off">
-                <button id="purchase-btn" onclick="calculateChange()">Purchase</button>    
-            </div>
+        <div class="customerThings">
+          <input
+            type="number"
+            class="form-control"
+            id="cash"
+            autocomplete="off"
+          />
+          <button id="purchase-btn">
+            Purchase
+          </button>
         </div>
+      </div>
 
-        <div class="cashierOpt border border-light">
-            <p class="text-light">Change in Drawer:</p>
-            <div class="theCid">
-            </div>
-        </div>
+      <div class="cashierOpt">
+        <div id="cash-in-drawer" class="text-light"></div>
+      </div>
     </div>
-</body>
+  </body>
 
-<script src="scriptTest.js"></script>
-<script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="scriptTest.js"></script>
+  <script src="script.js"></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
 </html>
